Quick fix for icon spacing in search bar

--- a/assets/application.css
+++ b/assets/application.css
@@ -811,6 +811,10 @@ p,
   margin-top: 2rem;
 }
 
+.ml-4 {
+  margin-left: 1rem;
+}
+
 .block {
   display: block;
 }
